# RingDetect-HPC

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  dummy.c  pyproject.toml  run_tests.sh  setup.py
.github/workflows/: build_wheels.yml
examples/: basic_usage.py
examples/data/: benzene.xyz  cyclobutane.csv  cyclopentane.mol
examples/parquet/: compress_to_parquet.py
ringdetect/: __init__.py  engine.py
src/: main.c  ring_engine.f90
